# openai-api-server-via-codex

./: AGENTS.md  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: publishing.md  release.md
docs/releases/: HEAD.md  v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
openai_api_server_via_codex/: __init__.py  app_server.py  auth.py  backend.py  compat.py  config.py  daemon.py  redaction.py  server.py
scripts/: release-notes.py
tests/: test_app_server_backend.py  test_auth.py  test_backend.py  test_cli.py  test_compat_stores.py  test_config.py  test_daemon.py  test_daemon_integration.py  test_live_codex_http_compatibility.py  test_live_dual_backend_integration.py  test_live_integration.py  test_main.py  test_openai_compat_server.py  test_package_metadata.py  test_redaction.py  test_release_notes.py
