[project]
name = "openai-api-server-via-codex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "tox>=4.53.1",
    "tox-uv>=1.35.1",
    "ty>=0.0.34",
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv>=1.29.0
parallel = auto
parallel_show_output = true
env_list = py312, lint, type

[testenv]
commands = pytest {posargs}

[testenv:lint]
commands = ruff check .

[testenv:type]
commands = ty check
"""
