[project]
name = "openai-api-server-via-codex"
version = "0.0.3"
description = "OpenAI-compatible local API server backed by Codex credentials"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "hotchpotch" },
]
keywords = ["codex", "openai", "fastapi", "openai-compatible", "uvx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.34.0",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
]

[project.scripts]
openai-api-server-via-codex = "openai_api_server_via_codex.server:main"

[project.urls]
Homepage = "https://github.com/hotchpotch/openai-api-server-via-codex"
Repository = "https://github.com/hotchpotch/openai-api-server-via-codex"
Issues = "https://github.com/hotchpotch/openai-api-server-via-codex/issues"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openai_api_server_via_codex*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "tox>=4.53.1",
    "tox-uv>=1.35.1",
    "twine>=6.2.0",
    "ty>=0.0.34",
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv>=1.29.0
parallel = auto
parallel_show_output = true
env_list = py311, lint, type

[testenv]
dependency_groups = dev
commands = pytest {posargs}

[testenv:lint]
commands = ruff check .

[testenv:type]
commands = ty check
"""

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
